# bica

./: Dockerfile  Home.py  docker-compose.yaml  pyproject.toml
lib/: community.py  config.py  schemas.py
lib/clients/database/: __init__.py  models.py  utils.py
lib/clients/database/crud/: __init__.py  action.py  relationship.py
pages/: Database.py
tests/: conftest.py
tests/clients/database/: test_action.py  test_relationship.py
