[tool.poetry]
name = "bica-dle"
version = "0.1.0"
description = "BICA course project. MEPhI 2024."
authors = ["Artem Pokroy <aapokroy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
streamlit = "^1.40.2"
graphviz = "^0.20.3"
pyvis = "^0.3.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
